# ludan_mjlab

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: create_new_task.md  faq.md  installation_guide.md  migration_guide.md  motivation.md
docs/api/: domain_randomization.md  nan_guard.md  spec_config.md
ludan_v0/: CMakeLists.txt  package.xml
ludan_v0/config/: joint_names_ludan_v0.yaml
ludan_v0/launch/: display.launch  gazebo.launch
ludan_v0/meshes/: Body.STL  CLeftShoulderYaw.STL  CRightAnkleRoll.STL  LeftAnklePitch.STL  LeftAnkleRoll.STL  LeftElbowPitch.STL  LeftElbowYaw.STL  LeftHipPitch.STL  LeftHipRoll.STL  LeftHipYaw.STL  LeftKnee.STL  LeftShoulderPitch.STL  LeftShoulderRoll.STL  LeftShoulderYaw.STL  LeftWristPitch.STL  NeckPitch.STL  NeckRoll.STL  NeckYaw.STL  RightAnklePitch.STL  RightAnkleRoll.STL  RightElbowPitch.STL  RightElbowYaw.STL  RightHipPitch.STL  RightHipRoll.STL  RightHipYaw.STL  RightKnee.STL  RightShoulderPitch.STL  RightShoulderRoll.STL  RightShoulderYaw.STL  RightWristPitch.STL  RightWristRoll.STL  WaistYaw.STL
ludan_v0/mjcf/: ludan_v0.xml
ludan_v0/urdf/: ludan_v0.csv  ludan_v0.urdf
src/mjlab/: __init__.py
src/mjlab/asset_zoo/: README.md
src/mjlab/asset_zoo/robots/: __init__.py
src/mjlab/entity/: __init__.py  data.py  entity.py
src/mjlab/envs/: __init__.py  manager_based_env.py  manager_based_rl_env.py  types.py
src/mjlab/envs/mdp/: __init__.py  events.py  observations.py  rewards.py  (+1 more)
src/mjlab/managers/: __init__.py  action_manager.py  command_manager.py  curriculum_manager.py  event_manager.py  manager_base.py  manager_term_config.py  observation_manager.py  reward_manager.py  scene_entity_config.py  termination_manager.py
src/mjlab/rl/: __init__.py  config.py  vecenv_wrapper.py
src/mjlab/scene/: __init__.py  scene.py
src/mjlab/scripts/: convert_urdf_to_mjcf.py  csv_to_npz.py  demo.py  gcs.py  list_envs.py  nan_viz.py  play.py  train.py
src/mjlab/sim/: __init__.py  randomization.py  sim.py  sim_data.py
src/mjlab/tasks/: __init__.py
src/mjlab/terrains/: README.md  __init__.py  config.py  heightfield_terrains.py  primitive_terrains.py  terrain_generator.py  terrain_importer.py  utils.py
src/mjlab/utils/: actuator.py  dataclasses.py  nan_guard.py  os.py  spec.py  spec_config.py  string.py  torch.py
src/mjlab/viewer/: __init__.py  base.py  debug_visualizer.py  mujoco_native_visualizer.py  native.py  offscreen_renderer.py  viewer_config.py  viser.py  viser_conversions.py  viser_reward_plotter.py  viser_visualizer.py
tests/: smoke_test.py  test_asset_zoo.py  test_circular_buffer.py  test_custom_robot_env.py  test_domain_randomization.py  test_entity.py  test_g1_constants.py  test_go1_constants.py  test_nan_guard.py  test_observation_history.py  test_rewards.py  test_scene.py  test_scene_entity_config.py  test_sim_buffer_capacity.py  test_sim_data.py  test_spec_config.py  test_viser_conversions.py
typings/mujoco/: __init__.pyi  _callbacks.pyi  _constants.pyi  _enums.pyi  _errors.pyi  _functions.pyi  _render.pyi  _specs.pyi  _structs.pyi  gl_context.pyi  renderer.pyi  viewer.pyi
(+42 files in other folders)
